Step 2a. init complete

--- a/app/components/lights-out/template.hbs
+++ b/app/components/lights-out/template.hbs
@@ -1,3 +1,9 @@
-<div id='message'></div>
+<div id='message'>
+    {{#if areLightsOut}}
+        Congratulations!
+    {{else}}
+        Number of Moves: {{numMoves}}
+    {{/if}}
+</div>
 
 <div id='game'></div>
